@@ -44,7 +44,7 @@ export(anova.gam, bam, bam.update,bandchol, betar, cox.ph,concurvity,
        residuals.gam,rig,rTweedie,rmvn, 
        Rrank,s,scat,sdiag,"sdiag<-",
        sim2jam,
-       slanczos,
+       slanczos,smooth2random,
        smoothCon,smooth.construct,smooth.construct2,
        smooth.construct.bs.smooth.spec,
        smooth.construct.cc.smooth.spec,
